force-app/main/default/objects/Individual/fields/iemail__c.field-meta.xml
<CustomField>
    <fullName>iemail__c</fullName>
    <label>iemail</label>
    <type>Email</type>
</CustomField>