force-app/main/default/objects/Individual/fields/Request_Description__c.field-meta.xml
<CustomField>
    <fullName>Request_Description__c</fullName>
    <inlineHelpText>Please enter the detailed description of received request and your comments.</inlineHelpText>
    <label>Request Description</label>
    <type>TextArea</type>
</CustomField>